--- a/package.json
+++ b/package.json
@@ -27,8 +27,14 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/serve-static": "^5.0.3",
     "@prisma/client": "6.15.0",
+    "@types/mjml-core": "^4.15.2",
     "dotenv": "^17.2.1",
+    "mjml": "^4.15.3",
+    "mjml-core": "^4.15.3",
+    "nodemailer": "^7.0.5",
+    "nodemailer-mjml": "^1.6.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -40,7 +46,9 @@
     "@nestjs/testing": "^11.0.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
+    "@types/mjml": "^4.7.4",
     "@types/node": "^22.10.7",
+    "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
