--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:generate": "prisma generate",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "prestart:prod": "npm run prisma:generate",
-    "start:prod": "node dist/main",
+    "prestart:prod": "npx prisma generate --no-engine && pnpm build",
+    "start:prod": "node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
