refactor(workflow): build application

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -24,3 +24,15 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install
+
+      - name: Generate Prisma Client
+        run: pnpm prisma generate
+
+      - name: Run Eslint
+        run: pnpm lint
+
+      - name: Run Coverage Tests
+        run: pnpm test:cov
+
+      - name: Build the Project
+        run: pnpm build
