--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": "22.11.0",
+    "pnpm": "9.15.0"
+  },
   "scripts": {
+    "postinstall": "prisma generate --no-engine",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
