--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": "22.11.0",
-    "pnpm": "9.15.0"
+    "node": "22.x",
+    "pnpm": "9.x"
   },
   "scripts": {
     "postinstall": "prisma generate --no-engine",
