--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "nodemailer": "^7.0.5",
     "nodemailer-mjml": "^1.6.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -52,8 +54,6 @@
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
