--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "@nestjs/serve-static": "^5.0.3",
     "@prisma/client": "6.15.0",
     "@types/mjml-core": "^4.15.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
     "mjml": "^4.15.3",
     "mjml-core": "^4.15.3",
     "nodemailer": "^7.0.5",
     "nodemailer-mjml": "^1.6.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.2"
+    "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
