chore(pnpm): define version in packagemanager to be usable with corepack in local machine

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "license": "UNLICENSED",
   "engines": {
-    "node": "22.x",
-    "pnpm": "10.x"
+    "node": "22.x"
   },
+  "packageManager": "pnpm@10.5.1",
   "scripts": {
     "postinstall": "prisma generate --no-engine",
     "build": "nest build",
