--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/serve-static": "^5.0.3",
     "@prisma/client": "6.15.0",
     "@types/mjml-core": "^4.15.2",
+    "aws-sdk": "^2.1692.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
@@ -53,6 +54,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^30.0.0",
     "@types/mjml": "^4.7.4",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/nodemailer": "^7.0.1",
     "@types/supertest": "^6.0.2",
