--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
+    "joi": "^18.0.1",
     "mjml": "^4.15.3",
     "mjml-core": "^4.15.3",
     "nodemailer": "^7.0.5",
