--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
+    "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "6.15.0",
     "@types/mjml-core": "^4.15.2",
     "class-transformer": "^0.5.1",
