--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.919.0",
+    "@bull-board/api": "^6.14.2",
+    "@bull-board/express": "^6.14.2",
+    "@bull-board/nestjs": "^6.14.2",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -36,6 +40,7 @@
     "@nestjs/swagger": "^11.2.1",
     "@prisma/client": "6.15.0",
     "@types/mjml-core": "^4.15.2",
+    "bullmq": "^5.64.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
