--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "license": "UNLICENSED",
   "packageManager": "pnpm@10.5.1",
   "scripts": {
-    "postinstall": "prisma generate --no-engine",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -35,7 +34,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.1",
-    "@prisma/client": "6.15.0",
+    "@prisma/adapter-pg": "^7.3.0",
+    "@prisma/client": "7.3.0",
     "@types/mjml-core": "^4.15.2",
     "bullmq": "^5.64.1",
     "class-transformer": "^0.5.1",
@@ -69,7 +69,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "^6.15.0",
+    "prisma": "^7.3.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
@@ -91,7 +91,8 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "moduleNameMapper": {
-      "^src/(.*)$": "<rootDir>/$1"
+      "^src/(.*)$": "<rootDir>/$1",
+      "^(\\.{1,2}/.*)\\.js$": "$1"
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
