--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "nodemailer": "^7.0.5",
     "nodemailer-mjml": "^1.6.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^20.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
