--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.1",
+    "@paypal/payouts-sdk": "^1.1.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "7.3.0",
     "@types/mjml-core": "^4.15.2",
+    "@types/paypal__payouts-sdk": "^1.0.6",
     "bullmq": "^5.64.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
